fix: hide ugly select style on FireFox

--- a/src/content.less
+++ b/src/content.less
@@ -446,6 +446,9 @@
           min-width: 100px;
         }
       }
+      select {
+        -moz-appearance: none;
+      }
       .access-token {
         border-bottom: none; // prevent overwrite by github style
         .link-button {
